# python-post023_jupyter_analitics

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml
doc/: Brain_Data.xlsx  Exercise_5.ipynb  Part_1.ipynb  Part_1.org  Part_1_foot.org  Part_1_head.org  Part_2.ipynb  Part_2.org  Part_2_foot.org  Part_2_head.org  Part_3.ipynb  Part_3.org  Part_4.ipynb  Part_4.org  Part_5.ipynb  Part_5.org  Part_5_foot.org  Part_5_head.org  Part_6.ipynb  Part_6.org  Resource_1.ipynb  california_pb_2023.csv  ds523_consumoacquaenergia.csv  unemployment_it.csv
