[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "exercises and data for analytics tutorial in python"
authors = ["Marco Paolo Valerio Vezzoli <marco.p.v.vezzoli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
scipy = "^1.14.1"
seaborn = "^0.13.2"
nbconvert = "^7.16.4"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
